@@ -43,7 +43,7 @@ if test "x$WIN32" = "xyes"; then
     AC_DEFINE(WINDOWS, 1, [Defines if the build is for Windows])
 fi
 
-gtk_required="2.12.0"
+gtk_required="2.18.0"
 gtksourceview2_required="2.2.0"
 
 AC_ARG_ENABLE([gio],
